# lettuce

./: .gitignore  AGENTS.md  HANDLERS.md  INSTALL_FOR_AGENTS.md  LICENSE  QUICKSTART.md  README.md  TRY_THIS_FIRST.md  llms-full.txt  llms.txt  pyproject.toml  setup.py
.github/workflows/: ci.yml
apps/lattice-ui/: README.md  index.html  script.js  styles.css
docs/: LETTUCE_RESOLVER.md  LETTUCE_VERIFY.md  agent-operated-onboarding.md  company-context-for-agents.md  distributed-company-context-v0-plan.md  first-run-demo.md  lettuce-capabilities.json  lettuce-v0-spec-and-build-plan.md  openclaw-runtime-source-setup.md  proposed-public-readme.md  public-v0-launch-note.md  public-v0-release-checklist.md  source-discovery-recipes.md  trust-boundary.md
docs/source-recipes/: README.md  direct-manual.md  email-recurring.md  transcripts-after-meeting.md  work-systems-github-linear.md
examples/: quick-demo.sh  tum-roster-telegram-thread.json
lenses/: next-action.md  operator-memory.md  product-discovery.md  project-focus-shift.md  relationship-account.md  risk-open-loop.md
lettuce/: ai_lens_runner.py  brief_html.py  cli.py  client.py  config.py  feedback.py  handlers.py  insights.py  lens_findings.py  lenses.py  notifications.py  openclaw_provider.py  packet.py  protocol_runtime.py  provider_adapter.py  routers.py  run_signal.py  runtime.py  runtime_seed.json  signal.py
tests/: test_ai_lens_runner.py  test_client.py  test_handlers.py  test_preview.py  test_protocol_runtime.py  test_route_specificity.py  test_runtime.py  test_synthetic_corpus.py
(+17 files in other folders)
